--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ android {
 }
 
 
-
 dependencies {
 
     api project(path: ':api')
@@ -77,4 +76,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.19"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
